# poker-rl-data

./: .env.sample  .gitignore  CLAUDE.md  README.md  export_to_hf.py  parse_poker_hands.py  player_win_rates.py  pyproject.toml  schema.sql
.claude/commands/: context_prime.md
ai_docs/: architecture.md  source_data_format.md  target_dataset_format.md
ai_docs/reference/source_data_examples/: hh.com_Agapenor_2810SH_2025.02.10_0.txt  hh.com_Gyptis_2810SH_2025.02.10_0.txt  hh.com_Julia_2810SH_2025.02.10_0.txt  hh.com_Perseus_2810SH_2025.02.10_0.txt
ai_specs/: project_plan.md
ai_specs/feat/: pokergpt_prompt_fixes.md  template.md
data_wrangler/: export_to_hf.py  implementation_plan.md  parse_poker_hands.py  player_win_rates.py  poker_hand_evaluator.py  pokergpt_dataset_creation.py  pokergpt_formatter.py  schema.sql  test_pokergpt_prompt.py
scripts/: analyze_dataset_eligibility.py  analyze_player_distribution.py  analyze_win_rate_distribution.py  check_all_in_format.py  check_hand.py  debug_pot_calculation.py  query_non_showdown_winning_hands.py  test_prompt_format.py  unzip_all.sh
